--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "test:watch": "yarn test --watch"
   },
   "dependencies": {
+    "leaflet": "^1.7.1",
     "next": "12.1.0",
     "next-pwa": "^5.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-leaflet": "^3.2.5",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
@@ -22,6 +24,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@types/jest": "^27.4.1",
+    "@types/leaflet": "^1.7.9",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/styled-components": "^5.1.24",
