--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "yarn test --watch"
+    "test:watch": "yarn test --watch",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@styled-icons/evaicons-outline": "^10.34.0",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.1.0",
     "leaflet": "^1.7.1",
     "next": "12.1.0",
     "next-pwa": "^5.4.5",
@@ -21,6 +25,10 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.7",
+    "@graphql-codegen/add": "^3.1.1",
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/typescript": "2.4.8",
+    "@graphql-codegen/typescript-operations": "2.3.5",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@types/jest": "^27.4.1",
