--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "leaflet": "^1.7.1",
     "next": "12.1.0",
     "next-pwa": "^5.4.5",
+    "next-seo": "^5.2.0",
+    "nextjs-progressbar": "^0.0.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-leaflet": "^3.2.5",
